# qbox

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_SIGNING.md  DEVELOPMENT.md  LICENSE  README.md  build-electron.sh  run-backend.sh  run.sh  setup.sh  validate-electron-setup.sh
.cursor/rules/: qbox-project.mdc
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md  testing.instructions.md
.github/workflows/: release.yml  test.yml
backend/: .coverage  build.py  build.spec  entitlements.plist  pyproject.toml  yoyo.ini
backend/app/: __init__.py  main.py
backend/app/api/: ai_queries.py  connections.py  files.py  metadata.py  queries.py  query.py  s3.py  settings.py  workspace.py
backend/app/config/: settings.py
backend/app/connections/: README.md  __init__.py
backend/app/connections/postgres/: __init__.py
backend/app/connections/s3/: __init__.py
backend/app/migrations/: 0001-initial-schema.rollback.sql  0001-initial-schema.sql
backend/app/models/: schemas.py
backend/app/services/: ai.py  ai_service.py  connection_repository.py  database.py  duckdb_manager.py  file_repository.py  metadata.py  metadata_collectors.py  migration_service.py  query_history_repository.py  query_repository.py  s3_service.py  settings_repository.py  workspace_repository.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: test_connections_api.py  test_query_execution.py  test_s3_api.py
docs/: app.js  index.html  styles.css
frontend/: app-update.yml  entitlements.plist  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts
frontend/assets/icons/: .gitkeep  README.md  icon.icns
frontend/electron/: config.ts  diagnostics.ts  global.d.ts  logger.ts  main.ts  preload.ts
frontend/public/: loading.html
frontend/scripts/: generate-icons.cjs  generate-icons.js  import-signing-cert.ts
frontend/src/: App.css  App.tsx  index.css
local-dev-services/: README.md
local-dev-services/init-scripts/: init-localstack.sh
local-dev-services/sample-files/: README.md  customer_segments.csv  generate_excel.py  marketing_campaigns.csv  sales_targets.csv
scripts/: generate-update-yml.sh
test-infrastructure/: README.md  docker-compose.yml
test-infrastructure/init-scripts/: init-postgres.sql  init-postgres2.sql
test-infrastructure/sample-files/: README.md  employee_performance.xlsx  employee_salaries.csv  generate_excel.py  product_categories.xlsx  product_suppliers.csv  warehouse_inventory.xlsx
(+56 files in other folders)
