[project]
name = "qbox"
version = "0.1.0"
description = "Build SQL queries across multiple data sources - all locally"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "duckdb>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "pytz>=2023.3",
    "python-multipart>=0.0.20",
    "boto3>=1.28.0",
    "yoyo-migrations>=8.2.0",
    "google-auth>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.25.0",
    "testcontainers>=3.7.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 120
filterwarnings = [
    # Ignore deprecation warnings from third-party libraries we can't control
    "ignore:The default datetime adapter is deprecated:DeprecationWarning",
    "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
    "ignore:The wait_for_logs function with string or callable predicates is deprecated:DeprecationWarning",
]
